let the form fixed at top of the page on iphone

--- a/static/application.css
+++ b/static/application.css
@@ -69,11 +69,29 @@ h1 {
     background: #aaa;
 }
 form#irc {
-    margin: 0 0 1em 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    background: #eee;
+    padding: 0 0 0 1em;
+    -webkit-box-shadow: 5px 5px 5px #555;
 }
 #channel {
     width: 6em;
 }
 .channel {
-    display: none;
+    padding: 10px 0;
+    display: block !important;
+    border: 1px solid #555;
+    overflow-y: auto;
+    width: 300px;
+    height: 330px;
+    margin: 0px 5px 5px 0;
+    -webkit-box-shadow: 5px 0px 5px #555;
+}
+#channels-wraper {
+    margin: 50px 0 0 0;
 }
